[tool.poetry]
name = "testpayments"
version = "0.1.0"
description = ""
authors = ["wwwwwdy <ant2.8949@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
ipython = "^8.4.0"
marshmallow = "^3.17.0"
marshmallow-dataclass = "^8.5.8"
aiohttp-jinja2 = "^1.5"
flake8 = "^4.0.1"
flake8-isort = "^4.1.2"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
